examples/example_project_add.php
<?php

include "semor_api.php";

SEMOR::$token = "XXX";

/*
frekvency
1 - kad den
3 - kad 3dny
5 - kadch 5 dn
7 - kadch 7 dn
14 - kadch 14 dn
*/

//Jen zaloen projektu, bez automatickho men pozic
$data = array(
	"url"=>"domena.tld",
	"https"=>"A",
	"lang"=>"CZ"
);

//Jen zaloen projektu, s menm pozic kad den
$data = array(
	"url"=>"domena.tld",
	"https"=>"A",
	"lang"=>"CZ",
	"frekvency"=>1
);


$result = SEMOR::PutProject($data);
if($result["status"] == 200){//zalozen novy projekt
	echo "ID projektu je:".$result["idp"];
}elseif($result["status"] == 201){//projekt u v systemu existuje pod ID
	echo "ID projektu je:".$result["idp"];
}else{
	//error
	print_r($result["error"]);
}
?>